batch32/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnet
  namespace: pavithra
  labels:
    app: dotnet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dotnet
  template:
    metadata:
      labels:
        app: dotnet
    spec:
      containers:
        - name: dotnet
          image: pavithra7194/dotnet:1.2.0  # Replace with your Docker image
          ports:
            - containerPort: 5000
