batch32/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dot
  namespace: pavithra
spec:
  selector:
    app: dot
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
